--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "football-app",
-  "version": "1.0.0",
-  "description": "Football app created during Udemy course. Author of the course: Stephen Grider",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bsopecki/football-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bsopecki/football-app/issues"
-  },
-  "homepage": "https://github.com/bsopecki/football-app#readme",
-  "dependencies": {
-    "concurrently": "^6.2.1",
-    "nodemon": "^2.0.12"
-  }
+	"name": "football-app",
+	"version": "1.0.0",
+	"description": "Football app created during Udemy course. Author of the course: Stephen Grider",
+	"main": "index.js",
+	"scripts": {
+		"start:build": "tsc -w",
+		"start:run": "nodemon build/index.js",
+		"start": "npm run start:build & npm run start:run"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/bsopecki/football-app.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/bsopecki/football-app/issues"
+	},
+	"homepage": "https://github.com/bsopecki/football-app#readme",
+	"dependencies": {
+		"nodemon": "^2.0.12"
+	}
 }
